--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,17 @@
-@import 'tailwindcss';
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap');
+@import 'tailwindcss';
 
 @theme {
-    --font-sans: 'Inter Tight', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+	--font-sans: 'Inter Tight', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+@config "../tailwind.config.js";
 
 html,
 body {
-    @apply bg-white dark:bg-gray-950;
+	@apply bg-white dark:bg-gray-950;
 
-    @media (prefers-color-scheme: dark) {
-        color-scheme: dark;
-    }
+	@media (prefers-color-scheme: dark) {
+		color-scheme: dark;
+	}
 }
