use root instead of public folder

--- a/app/app.css
+++ b/app/app.css
@@ -15,7 +15,7 @@ body {
 		color-scheme: dark;
 	}
 
-    background-image: url("../public/waves-bg.svg");
+    background-image: url("/waves-bg.svg");
     background-repeat: no-repeat;
     background-size: cover;
 }
