--- a/app/app.css
+++ b/app/app.css
@@ -9,7 +9,33 @@
 
 html,
 body {
-	@apply bg-white dark:bg-gray-950;
+	@theme {
+		--color-background-50: oklch(42.59% 0.064 183.16);
+		--color-background-100: oklch(39.97% 0.06 183.74);
+		--color-background-200: oklch(37.34% 0.055 184.33);
+		--color-background-300: oklch(33.26% 0.048 184.58);
+		--color-background-400: oklch(30.81% 0.044 183.39);
+		--color-background-500: oklch(26.51% 0.036 183.48);
+		--color-background-600: oklch(22.13% 0.027 187.21);
+		--color-background-700: oklch(19% 0.022 190.24);
+		--color-background-800: oklch(14.84% 0.016 187.84);
+		--color-background-900: oklch(12.46% 0.015 185.11);
+		--color-background-950: oklch(9.93% 0.011 195.47);
+
+		--color-textcolor-50: oklch(95.42% 0.022 189.88);
+		--color-textcolor-100: oklch(93.19% 0.033 189.5);
+		--color-textcolor-200: oklch(89.25% 0.051 188.59);
+		--color-textcolor-300: oklch(85.64% 0.069 187.91);
+		--color-textcolor-400: oklch(81.91% 0.085 187.11);
+		--color-textcolor-500: oklch(78.36% 0.098 187.07);
+		--color-textcolor-600: oklch(74.55% 0.11 186.11);
+		--color-textcolor-700: oklch(68.31% 0.104 185.33);
+		--color-textcolor-800: oklch(60.38% 0.092 185.54);
+		--color-textcolor-900: oklch(52.18% 0.078 184.68);
+		--color-textcolor-950: oklch(47.2% 0.07 185.78);
+	}
+
+	@apply bg-background-800 text-textcolor-50;
 
 	:root {
 		--toastify-color-dark: var(--color-gray-700) !important;
